--- a/frontend/libs/game/src/lib/team/team.component.html
+++ b/frontend/libs/game/src/lib/team/team.component.html
@@ -1,23 +1,20 @@
 @if (team(); as team) {
-    <div
+  <div
     class="card ml-7 grid h-24 flex-grow place-items-center rounded-box bg-accent-content lg:ml-9"
   >
     <div class="flex text-[1.4rem]">
       <div>TEAM</div>
-      <div class="text-orange-400">&nbsp; {{team.name}}</div>
+      <div class="text-orange-400">&nbsp; {{ team.name }}</div>
     </div>
     <!-- Added mx-4 for left and right margin -->
     <div class="flex break-words">
       {{ team.playerOne?.name }}
-      <div class="text-orange-400">
-        &nbsp;&nbsp;{{ team.playerOne?.elo }}
-      </div>
+      <div class="text-orange-400">&nbsp;&nbsp;{{ team.playerOne?.elo }}</div>
     </div>
     <div class="flex break-words">
       {{ team.playerTwo?.name }}
-      <div class="text-orange-400">
-        &nbsp;&nbsp;{{ team.playerTwo?.elo }}
-      </div>
+      <div class="text-orange-400">&nbsp;&nbsp;{{ team.playerTwo?.elo }}</div>
     </div>
   </div>
+  <lib-game-team-player-name-change [team]="team" [tableId]="tableId()" />
 }
