--- a/frontend/libs/game/src/lib/game/game-score/game-score.component.html
+++ b/frontend/libs/game/src/lib/game/game-score/game-score.component.html
@@ -1,16 +1,13 @@
-<div class="relative">
-  <img
-    ngSrc="assets/images/sprite.png"
-    class="h-auto w-full rotate-90 transform"
-    alt="Background image for score"
-    fill
-  />
-  <div class="absolute inset-0 flex items-center justify-around">
-    <div class="text-3xl font-bold text-red-500">
+<div
+  id="game-score-container"
+  class="relative m-auto flex items-center justify-center bg-no-repeat md:h-[250px] md:w-[350px] md:bg-[url('/assets/images/sprite.png')]"
+>
+  <div class="z-10 flex flex-row items-center justify-around text-center">
+    <div class="text-[10rem] text-error">
       {{ teamWhiteScore() }}
     </div>
-    <div class="text-3xl font-bold text-red-500">:</div>
-    <div class="text-3xl font-bold text-red-500">
+    <div class="text-[10rem] font-bold text-orange-400">:</div>
+    <div class="text-[10rem] font-bold text-error">
       {{ teamBlackScore() }}
     </div>
   </div>
