--- a/frontend/libs/game/src/lib/team/team.component.html
+++ b/frontend/libs/game/src/lib/team/team.component.html
@@ -1,20 +1,23 @@
 @if (team(); as team) {
-  <div
-    class="card ml-7 grid h-24 flex-grow place-items-center rounded-box bg-accent-content lg:ml-9"
-  >
-    <div class="flex text-[1.4rem]">
+  <div class="card min-h-[170px] w-3/4 rounded-box bg-accent-content">
+    <div
+      class="flex flex-row flex-wrap items-center justify-center pt-1 text-3xl"
+    >
       <div>TEAM</div>
       <div class="text-orange-400">&nbsp; {{ team.name }}</div>
     </div>
-    <!-- Added mx-4 for left and right margin -->
-    <div class="flex break-words">
-      {{ team.playerOne?.name }}
-      <div class="text-orange-400">&nbsp;&nbsp;{{ team.playerOne?.elo }}</div>
-    </div>
-    <div class="flex break-words">
-      {{ team.playerTwo?.name }}
-      <div class="text-orange-400">&nbsp;&nbsp;{{ team.playerTwo?.elo }}</div>
-    </div>
+    <lib-game-team-player-name [player]="team.playerOne" />
+    <lib-game-team-player-name [player]="team.playerTwo" />
   </div>
-  <lib-game-team-player-name-change [team]="team" [tableId]="tableId()" />
+  <div class="w-3/4">
+    <lib-game-team-player-name-change [team]="team" [tableId]="tableId()" />
+  </div>
+  @if (environment.debug) {
+    <div class="mt-4 w-3/4">
+      <lib-game-debug-register-player
+        [tableId]="tableId()"
+        [teamColor]="team.color"
+      />
+    </div>
+  }
 }
