--- a/frontend/libs/game/src/lib/game/game-score/game-score.component.html
+++ b/frontend/libs/game/src/lib/game/game-score/game-score.component.html
@@ -4,11 +4,11 @@
 >
   <div class="z-10 flex flex-row items-center justify-around text-center">
     <div class="text-[10rem] text-error">
-      {{ teamWhiteScore() }}
+      {{ firstTeamScore() }}
     </div>
     <div class="text-[10rem] font-bold text-orange-400">:</div>
     <div class="text-[10rem] font-bold text-error">
-      {{ teamBlackScore() }}
+      {{ secondTeamScore() }}
     </div>
   </div>
 </div>
