--- a/frontend/libs/game/src/lib/game/game.component.html
+++ b/frontend/libs/game/src/lib/game/game.component.html
@@ -12,8 +12,8 @@
         />
       }
       <lib-game-score
-        [teamBlackScore]="game.teamBlack?.score"
-        [teamWhiteScore]="game.teamWhite?.score"
+        [secondTeamScore]="firstTeam()?.score"
+        [firstTeamScore]="lastTeam()?.score"
       />
       @if (environment.debug) {
         <lib-game-debug-score-change
