--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,6 @@
-<div class="mt-2 flex items-center justify-center">
-  <lib-navbar></lib-navbar>
+<div class="mt-2 flex w-full flex-row items-center justify-center">
+  <lib-navbar class="flex-1"></lib-navbar>
   <lib-theme-toggle-button></lib-theme-toggle-button>
 </div>
+
 <router-outlet></router-outlet>
