Convert table sprite to webp

--- a/frontend/libs/game/src/lib/game/game-score/game-score.component.html
+++ b/frontend/libs/game/src/lib/game/game-score/game-score.component.html
@@ -1,6 +1,6 @@
 <div
   id="game-score-container"
-  class="relative m-auto flex items-center justify-center bg-no-repeat md:h-[250px] md:w-[350px] md:bg-[url('/assets/images/sprite.png')]"
+  class="relative m-auto flex items-center justify-center bg-no-repeat md:h-[250px] md:w-[350px] md:bg-[url('/assets/images/sprite.webp')]"
 >
   <div class="z-10 flex flex-row items-center justify-around text-center">
     <div class="text-[10rem] text-error">
