Revert "add name property to Team"

--- a/frontend/libs/game/src/lib/team/team.component.html
+++ b/frontend/libs/game/src/lib/team/team.component.html
@@ -4,7 +4,7 @@
       class="flex flex-row flex-wrap items-center justify-center pt-1 text-3xl"
     >
       <div>TEAM</div>
-      <div class="text-orange-400">&nbsp; {{ team.name }}</div>
+      <div class="text-orange-400">&nbsp; {{ team.color }}</div>
     </div>
     <lib-game-team-player-name [player]="team.playerOne" />
     <lib-game-team-player-name [player]="team.playerTwo" />
