--- a/frontend/libs/game/src/lib/team/player-name-change/player-name-change.component.html
+++ b/frontend/libs/game/src/lib/team/player-name-change/player-name-change.component.html
@@ -3,7 +3,7 @@
     <input
       #input
       type="text"
-      placeholder="{{ team()?.playerOne?.name }}"
+      placeholder="{{ team().playerOne?.name }}"
       class="input input-bordered input-error w-3/4 max-w-xs"
     />
     <button
