--- a/frontend/libs/game/src/lib/game/game.component.html
+++ b/frontend/libs/game/src/lib/game/game.component.html
@@ -1,10 +1,7 @@
-<div id="game-container" class="flex flex-col flex-nowrap justify-center">
+<div class="flex flex-col flex-nowrap justify-center">
   <lib-game-team-swap (onSwapTeams)="toggleDirection()" />
   @if (game(); as game) {
-    <div
-      id="score-container"
-      class="h-max-[300px] my-12 flex flex-row items-center justify-around"
-    >
+    <div class="h-max-[300px] my-4 flex flex-row items-center justify-around">
       @if (environment.debug) {
         <lib-game-debug-score-change
           [game]="game"
@@ -22,28 +19,24 @@
         />
       }
     </div>
-    <div
-      id="ranked-container"
-      class="flex flex-row items-center justify-center"
-    >
-      @if (game.gameMode === 'RANKED') {
-        <span class="custom-font">
+    <div class="flex flex-row items-center justify-center py-2">
+      @if (game.gameMode === 'DEFAULT') {
+        <span class="custom-font text-4xl text-error">
           {{ 'ranked' | uppercase }}
         </span>
       }
     </div>
 
-    <div id="teams-container" class="flex flex-row items-center justify-around">
-      <lib-game-team [team]="firstTeam()" />
-      <div class="divider divider-warning divider-horizontal text-[1.5rem]">
+    <div class="flex">
+      <lib-game-team [team]="firstTeam()" [tableId]="tableId()" />
+      <div
+        class="divider divider-warning divider-horizontal mx-1 text-[1.5rem]"
+      >
         VS
       </div>
-      <lib-game-team [team]="lastTeam()" />
+      <lib-game-team [team]="lastTeam()" [tableId]="tableId()" />
     </div>
-    <div
-      id="reset-container"
-      class="mt-4 flex flex-row items-center justify-center"
-    >
+    <div class="mt-4 flex flex-row items-center justify-center">
       @if (environment.debug) {
         <button (click)="reset(game)" class="btn btn-outline btn-error">
           RESET
