--- a/frontend/libs/game/src/lib/team/player-name/player-name.component.html
+++ b/frontend/libs/game/src/lib/team/player-name/player-name.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-row items-center justify-center py-1 text-xl">
+<div class="flex flex-row items-center justify-center py-1 sm:text-3xl">
   {{ player()?.name }}
   <div class="ml-3 text-orange-400">
     {{ player()?.elo }}
