--- a/frontend/libs/game/src/lib/team/team.component.html
+++ b/frontend/libs/game/src/lib/team/team.component.html
@@ -1,23 +1,30 @@
-@if (team(); as team) {
-  <div class="card min-h-[170px] w-3/4 rounded-box bg-accent-content">
+<div class="flex flex-col items-center px-4 md:px-0">
+  @if (team(); as team) {
     <div
-      class="flex flex-row flex-wrap items-center justify-center pt-1 text-3xl"
+      class="card min-h-[170px] w-full rounded-box bg-accent-content md:w-3/4"
     >
-      <div>TEAM</div>
-      <div class="text-orange-400">&nbsp; {{ team.color }}</div>
+      <div
+        class="flex flex-row flex-wrap items-center justify-center pt-1 text-2xl md:text-3xl"
+      >
+        <div>
+          <span>TEAM</span>&nbsp;<span class="text-orange-400">{{
+            team.color
+          }}</span>
+        </div>
+      </div>
+      <lib-game-team-player-name [player]="team.playerOne" />
+      <lib-game-team-player-name [player]="team.playerTwo" />
     </div>
-    <lib-game-team-player-name [player]="team.playerOne" />
-    <lib-game-team-player-name [player]="team.playerTwo" />
-  </div>
-  <div class="w-3/4">
-    <lib-game-team-player-name-change [team]="team" [tableId]="tableId()" />
-  </div>
-  @if (environment.debug) {
-    <div class="mt-4 w-3/4">
-      <lib-game-debug-register-player
-        [tableId]="tableId()"
-        [teamColor]="team.color"
-      />
+    <div class="w-3/4">
+      <lib-game-team-player-name-change [team]="team" [tableId]="tableId()" />
     </div>
+    @if (environment.debug) {
+      <div class="mt-4 w-3/4">
+        <lib-game-debug-register-player
+          [tableId]="tableId()"
+          [teamColor]="team.color"
+        />
+      </div>
+    }
   }
-}
+</div>
