--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,8 @@
-<div class="mt-2 flex items-center justify-center">
-  <lib-navbar></lib-navbar>
-  <lib-theme-toggle-button></lib-theme-toggle-button>
-</div>
-<router-outlet></router-outlet>
+<header>
+  <nav>
+    <lib-navbar></lib-navbar>
+  </nav>
+</header>
+<main>
+  <router-outlet></router-outlet>
+</main>
