--- a/frontend/libs/game/src/lib/debug/register-player/register-player.component.html
+++ b/frontend/libs/game/src/lib/debug/register-player/register-player.component.html
@@ -1,3 +1,3 @@
 <button class="btn btn-outline btn-error w-full" (click)="registerPlayer()">
-  Register Player ({{ teamColor() }})
+  Register Player {{ teamColor() }}-{{ name() }}
 </button>
