Remove won and lost (#61)
* Remove won and lost

* Show 0% winrate instead of -

* Fix score sort after change

--- a/frontend/libs/score/src/lib/score/score.component.html
+++ b/frontend/libs/score/src/lib/score/score.component.html
@@ -8,26 +8,18 @@
           <th></th>
           <th>Name</th>
           <th class="text-right">Score</th>
-          <th class="text-right">Won</th>
-          <th class="text-right">Lost</th>
           <th class="text-right">Winrate</th>
           <th class="text-right">History</th>
         </tr>
       </thead>
       <tbody>
-        @for (player of players(); track player.id) {
+        @for (player of players(); track player) {
           <tr class="text-[1.25rem]">
             <th class="text-right">{{ $index + 1 }}</th>
             <td>{{ player.name }}</td>
             <td class="text-right text-orange-400">{{ player.elo }}</td>
-            <td class="text-right">{{ player.won }}</td>
-            <td class="text-right">{{ player.lost }}</td>
             <td class="text-right">
-              @if (player.won && player.lost) {
-                {{ player.won / (player.won + player.lost) | percent }}
-              } @else {
-                -
-              }
+              {{ player.winRate | percent }}
             </td>
             <td class="flex justify-end gap-1">
               @for (team of player.lastFive; track team.id) {
